fixed word wrap issues the previous commit broke

--- a/styles/console.css
+++ b/styles/console.css
@@ -117,6 +117,7 @@
 .console-message-container {
     height: calc(100% - 4.5em);
     overflow-y: scroll;
+    overflow-x: hidden;
     padding-right:1em;
     scrollbar-width: auto !important;
 }
@@ -138,7 +139,7 @@
     line-height: 110%;
     padding: 5px 5px;
     max-width: 100%;
-    overflow-wrap: break-word;
+    overflow-wrap: anywhere;
 }
 
 .console-message-interact {
